fix mobile sign-in button & auth0 issue on mobile safari

--- a/client/src/components/header/style.css
+++ b/client/src/components/header/style.css
@@ -15,13 +15,12 @@
 .header > img {
   margin: 0;
   padding: 10px 10px 0 10px;
-  font-weight: 400;
-  font-size: large;
-  color: inherit;
-  text-align: center;
+  height: 56px;
+  object-fit: cover;
 }
 
 .header > nav {
+  position: relative;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -42,7 +41,8 @@
 }
 
 .header > nav > *:last-child {
-  margin-top: auto;
+  position: absolute;
+  bottom: 0;
 }
 
 .header nav *:hover,
